Add HTML brackets to examples/input-output

--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -12,7 +12,7 @@
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
 <header-group>
-  <h2 slot=header>Input Output</h2>
+  <h2 slot=header>&lt;input-output&gt;</h2>
 </header-group>
 <!-- import works inline body -->
 <link rel=import href=header-group.html>
