Add HTML brackets to examples/link-import

--- a/examples/link-import.html
+++ b/examples/link-import.html
@@ -9,6 +9,10 @@
 
 <title>snuggsi ツ - Header Group</title>
 
+<header-group>
+  <h2 slot=header>&lt;header-group&gt;</h2>
+</header-group>
+
 <!-- defaults can be supplied -->
 <header-group></header-group>
 
