Add HTML brackets to examples/party-line

--- a/examples/party-line.html
+++ b/examples/party-line.html
@@ -9,11 +9,8 @@
 <script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
 
 <header-group>
-  <h2 slot=header>
-    Party Line
-    <br/>
-    Skype / Hangouts Clone
-  </h2>
+  <h2 slot=header>&lt;party-line&gt;</h2>
+  <h3 slot=subheader>Skype / Hangouts Clone</h3>
 </header-group>
 <!-- import works inline body -->
 <link rel=import href=header-group.html>
