--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -3,32 +3,7 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-<link rel=stylesheet href=http://www.devpunks.com/typography.css>
-<style>
-
-  infinity-calendar a
-    { line-height: 2em }
-
-</style>
-
-<script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=https://unpkg.com/snuggsi/snuggsi.min.js></script>
-
-<!-- import works inline body -->
-<link rel=import href=header-group.html>
-
-<link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
-
-<header-group>
-  <h2 slot=header>&lt;Infinity-Calendar&gt;</h2>
-  <ul slot=subheader>
-    <li>
-      <a target=external href=http://jessewolgamott.com/react-calendar-table-example>react-calendar-table-example</a>
-    <li>
-      <a target=external href=http://teuxdeux.com>http://teudeux.com</a>
-  </ul>
-</header-group>
-
+<script nomodule src=../dist/snuggsi.es></script>
 
 <infinity-calendar>
 
@@ -62,6 +37,4 @@
 
   <script src=infinity-calendar.es defer></script>
 </infinity-calendar>
-
-<script src=../../vendor/browser-sync.es></script>
 
