--- a/harness.html
+++ b/harness.html
@@ -5,15 +5,14 @@
 
 <link rel='stylesheet' href='http://www.devpunks.com/typography.css'>
 
-<script type=module src=//unpkg.com/snuggsi/snuggsi.es></script>
-<script nomodule    src=//unpkg.com/snuggsi/snuggsi.js></script>
-<script nomodule    src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule src=dist/snuggsi.es></script>
 
 <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base -->
-<base href='//localhost:8181/examples/'>
+<base href='//localhost:8181/examples'>
 
 <hgroup>
-  <h1>ツsnuggsi</h1>
+  <h1>snuggsiツ</h1>
   <h2>Easy DOM Components</h2>
 </hgroup>
 
