--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -27,7 +27,7 @@
 </style>
 
 <script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
+<script nomodule src=http://unpkg.com/snuggsi></script>
 
 <!-- import works inline body -->
 <link async rel=import href=header-group.html>
