Disable base element

--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
 <!-- https://www.speedshop.co/2015/10/21/hacking-head-tags-for-speed-and-profit.html -->
 
 <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base -->
-<base href=//localhost:8181>
+<!--<base href=//localhost:8181>-->
 
 <hgroup>
   <h1>snuggsi ツ</h1>
   <h2>Easy Web Components</h2>
 </hgroup>
-
-<hello-world></hello-world>
 
 <nav>
 <!-- https://skatejs.gitbooks.io/skatejs/content -->
