--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script nomodule    src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
 <script nomodule    src=//unpkg.com/snuggsi/snuggsi.min.js></script>
 
-<link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
+<link rel=icon type=image/png href=/favicon-16x16.png sizes=16x16>
 
 
 <!-- https://www.speedshop.co/2015/10/21/hacking-head-tags-for-speed-and-profit.html -->
