Add japanese styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
+<style>
+// enough inline styles to paint to fold
+// Japanese colors - https://en.wikipedia.org/wiki/Traditional_colors_of_Japan#Red.2FViolet_series
+</style>
+
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
 <script nomodule    src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
