--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
-<script nomodule src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=//unpkg.com/snuggsi></script>
+<script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule src=https://unpkg.com/snuggsi></script>
 
 <link rel=icon type=image/png href=/favicon-16x16.png sizes=16x16>
 
