--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<title>snuggsi ツ</title>
-
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
+
+<title>snuggsi ツ</title>
 
 <style>
 // enough inline styles to paint to fold
@@ -10,8 +10,16 @@
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
-<script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=https://unpkg.com/snuggsi></script>
+<script type=module>
+  import {E} from 'https://unpkg.com/snuggsi/dist/snuggsi.min.es'
+
+  console.warn ('Element', E)
+</script>
+
+<script nomodule src=//unpkg.com/snuggsi></script>
+<script nomodule>
+console.log ('nomodule')
+</script>
 
 <link rel=icon type=image/png href=/favicon-16x16.png sizes=16x16>
 
