--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
 <script type=module>
-  import {E} from 'https://unpkg.com/snuggsi/dist/snuggsi.min.es'
+  import {Element} from './elements/index.js'
 
-  console.warn ('Element', E)
+  console.warn ('Element', Element)
 </script>
 
 <script nomodule src=//unpkg.com/snuggsi></script>
