Add preload script

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   onload="this.rel='stylesheet'"
   href=http://www.devpunks.com/typography.css>
 
+<link rel=preload as=script href=./elements/index.js>
 <script type=module>
   import {Element} from './elements/index.js'
 
@@ -63,6 +64,7 @@ console.log ('nomodule')
 
 <nav>
 <!-- https://skatejs.gitbooks.io/skatejs/content -->
+<!-- https://vuejs.org/v2/guide -->
   <a href=#introduction>Introduction</a>
   <a href=#installation>Installation</a>
   <a href=#examples>Examples</a>
