Add link to examples

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ console.log ('nomodule')
 <!-- https://vuejs.org/v2/guide -->
   <a href=#introduction>Introduction</a>
   <a href=#installation>Installation</a>
-  <a href=#examples>Examples</a>
+  <a title=Examples href=examples>Examples</a>
   <a href=#conventions>Conventions</a>
   <a href=#events>Events</a>
   <a href=#tokens>Tokens</a>
