Change title of homepage

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
+<title>snuggsi.esツ</title>
+
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
-
-<title>snuggsi ツ</title>
 
 <style>
 // enough inline styles to paint to fold
