Update slots for header-group

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ console.log ('nomodule')
 <!--<base href=//localhost:8181>-->
 
 <header-group>
-  <h1>snuggsi<sub>.es</sub>ツ</h1>
-  <h2>Easy Web Components</h2>
+  <h1 slot=header>snuggsi<sub>.es</sub>ツ</h1>
+  <h2 slot=subheader>Easy Web Components</h2>
 </header-group>
 
 <nav>
