Update header-group import

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   onload="this.rel='stylesheet'"
   href=http://www.devpunks.com/typography.css>
 
-<link async rel=import href=/examples/header-group.html>
+<link rel=import href=/examples/header-group.html>
 
 <link rel=preload as=script href=https://unpkg.com/snuggsi@0.5.46/snuggsi.min.js>
 
