Preload web components polyfill

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   href=http://www.devpunks.com/typography.css>
 
 <link rel=preload as=script href=https://unpkg.com/snuggsi@0.5.46/snuggsi.min.js>
+<link rel=preload as=script href=https://unpkg.com/snuggsi@0.5.46/examples/webcomponents-hi-ce.js>
 
 <script type=module>
   import {Element} from 'https://unpkg.com/snuggsi@0.5.46/snuggsi.min.js'
@@ -38,6 +39,8 @@
   console.warn ('Element', Element)
 </script>
 
+
+<script nomodule src=https://unpkg.com/snuggsi@0.5.46/examples/webcomponents-hi-ce.js></script>
 
 <script src=https://unpkg.com/snuggsi></script>
 <script nomodule>
