Update header definition

--- a/examples/header-group.html
+++ b/examples/header-group.html
@@ -15,7 +15,7 @@ header-group {
 <template>
 
   <hgroup>
-    <h1><a href=/examples/index.html>snuggsi ツ</a></h1>
+    <h1><a href=/>snuggsi<span>.es</span>ツ</a></h1>
     <slot name=header><h2>try an example</h2></slot>
     <slot name=subheader></slot>
   </hgroup>
@@ -64,3 +64,4 @@ Element `header-group`
 &lt;/header-group&gt;
 </pre>
 </code>
+
