Cannot seem to style h1

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ console.log ('nomodule')
 
 <link rel=import href=/examples/header-group.html>
 <style>
-header-group a:link {
+h1 a:link {
   text-decoration: none;
   border: none;
 }
