Remove async from header-group

--- a/examples/index.html
+++ b/examples/index.html
@@ -18,7 +18,7 @@ console.log ('nomodule')
 console.log ('module')
 </script>
 
-<link async rel=import href=header-group.html>
+<link rel=import href=header-group.html>
 
 <title>snuggsi - examples</title>
 
