Update header-group import

--- a/examples/index.html
+++ b/examples/index.html
@@ -18,7 +18,7 @@ console.log ('nomodule')
 console.log ('module')
 </script>
 
-<link rel=import href=header-group.html>
+<link rel=import href=/examples/header-group.html>
 
 <title>snuggsi - examples</title>
 
@@ -28,8 +28,6 @@ console.log ('module')
     { display: flex; flex-flow: column }
 
 </style>
-
-<base href=/examples>
 
 <header-group>
   <h2 slot=header>Look at these examples</h2>
