Add example to path

--- a/examples/index.html
+++ b/examples/index.html
@@ -35,31 +35,31 @@ console.log ('module')
 
 <ul>
   <li>
-    <a href=hello-world.html>&lt;hello-world&gt;</a>
+    <a href=/examples/hello-world.html>&lt;hello-world&gt;</a>
 
   <li>
-    <a href=link-import.html>&lt;link-import&gt;</a>
+    <a href=/examples/link-import.html>&lt;link-import&gt;</a>
 
   <li>
-    <a href=x-flashy.html>&lt;x-flashy&gt;</a>
+    <a href=/examples/x-flashy.html>&lt;x-flashy&gt;</a>
 
   <li>
-    <a href=add-subtract.html>&lt;add-subtract&gt;</a>
+    <a href=/examples/add-subtract.html>&lt;add-subtract&gt;</a>
 
   <li>
-    <a href=infinity-calendar.html>&lt;infinity-calendar&gt;</a>
+    <a href=/examples/infinity-calendar.html>&lt;infinity-calendar&gt;</a>
 
   <li>
-    <a href=filter.html>&lt;filter&gt;</a>
+    <a href=/examples/filter.html>&lt;filter&gt;</a>
 
   <li>
-    <a href=input-output.html>&lt;input-output&gt;</a>
+    <a href=/examples/input-output.html>&lt;input-output&gt;</a>
 
   <li>
-    <a href=autocomplete.html>&lt;autocomplete&gt;</a>
+    <a href=/examples/autocomplete.html>&lt;autocomplete&gt;</a>
 
   <li>
-    <a href=party-line.html>&lt;party-line&gt;</a>
+    <a href=/examples/party-line.html>&lt;party-line&gt;</a>
 
 </ul>
 
