Reorder navigation links and assign proper headers

--- a/index.html
+++ b/index.html
@@ -80,10 +80,8 @@ header-group a span {
 <!-- https://skatejs.gitbooks.io/skatejs/content -->
 <!-- https://vuejs.org/v2/guide -->
 <!-- http://aurelia.io/consulting.html -->
+  <header>Getting Started</header>
   <ul>
-    <li>
-      <a href=#introduction>Introduction</a>
-
     <li>
       <a href=#installation>Installation</a>
 
@@ -94,19 +92,21 @@ header-group a span {
       <a href=#conventions>Conventions</a>
 
     <li>
+      <a href=#lifecycle>Lifecycle</a>
+
+  <header>Documentation</header>
+  <ul>
+    <li>
       <a href=#events>Events</a>
+
+    <li>
+      <a href=#interfaces>Interfaces</a>
 
     <li>
       <a href=#tokens>Tokens</a>
 
     <li>
       <a href=#slots>Slots</a>
-
-    <li>
-      <a href=#interfaces>Interfaces</a>
-
-    <li>
-      <a href=#lifecycle>Lifecycle</a>
 
   </ul>
 
