Add conventions to nav list

--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@ header-group a span {
       <a title=Examples href=examples>Examples</a>
 
     <li>
-      <a href=#conventions>Conventions</a>
+      <details open>
+        <summary>Conventions</summary>
+
+        <ul>
+          <li>
+            <a title=Context href=#context>Context</a>
+
+      </details>
 
     <li>
       <a href=#lifecycle>Lifecycle</a>
@@ -99,10 +106,20 @@ header-group a span {
   <header>Documentation</header>
   <ul>
     <li>
-      <a href=#events>Events</a>
+      <details open>
+        <summary>Interfaces</summary>
+
+        <ul>
+          <li>
+            <a href=#element>Element</a>
+
+          <li>
+            <a href=#template>Template</a>
+
+      </details>
 
     <li>
-      <a href=#interfaces>Interfaces</a>
+      <a href=#events>Events</a>
 
     <li>
       <a href=#tokens>Tokens</a>
