Update examples/hello-world with jsfiddle

--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -40,8 +40,9 @@
 </header-group>
 
 <section id=sand-box>
-<script src=http://jsfiddle.net/uq4457pd/embed/html/dark/></script>
-<script src=http://jsfiddle.net/uq4457pd/embed/result/dark/></script>
+ <iframe allowtransparency=true src=//jsfiddle.net/snuggs/3zwkj9wg/embedded/html/dark/?fontColor=ffffff&accentColor=9696f0&bodyColor=3b3b3b&menuColor=3b3b3b frameborder=0></iframe>
+
+<iframe src=//jsfiddle.net/snuggs/3zwkj9wg/embedded/result/dark/?fontColor=ffffff&accentColor=9696f0&bodyColor=3b3b3b&menuColor=3b3b3b frameborder=0></iframe>
 
 <hello-world>
   Hello World
