Remove transparency from iframe on examples/hello-world

--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -40,7 +40,7 @@
 </header-group>
 
 <section id=sand-box>
- <iframe allowtransparency=true src=//jsfiddle.net/snuggs/3zwkj9wg/embedded/html/dark/?fontColor=ffffff&accentColor=9696f0&bodyColor=3b3b3b&menuColor=3b3b3b frameborder=0></iframe>
+ <iframe src=//jsfiddle.net/snuggs/3zwkj9wg/embedded/html/dark/?fontColor=ffffff&accentColor=9696f0&bodyColor=3b3b3b&menuColor=3b3b3b frameborder=0></iframe>
 
 <iframe src=//jsfiddle.net/snuggs/3zwkj9wg/embedded/result/dark/?fontColor=ffffff&accentColor=9696f0&bodyColor=3b3b3b&menuColor=3b3b3b frameborder=0></iframe>
 
