Add css tab to hello-world example

--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -40,10 +40,11 @@
 </header-group>
 
 <section id=sand-box>
- <iframe src=//jsfiddle.net/snuggs/3zwkj9wg/embedded/html/dark/?fontColor=ffffff&accentColor=9696f0&bodyColor=3b3b3b&menuColor=3b3b3b frameborder=0></iframe>
+ <iframe src=//jsfiddle.net/snuggs/3zwkj9wg/embedded/html,css/dark/?fontColor=ffffff&accentColor=9696f0&bodyColor=3b3b3b&menuColor=3b3b3b frameborder=0></iframe>
 
-<iframe src=//jsfiddle.net/snuggs/3zwkj9wg/embedded/result/dark/?fontColor=ffffff&accentColor=9696f0&bodyColor=3b3b3b&menuColor=3b3b3b frameborder=0></iframe>
+<iframe src=//jsfiddle.net/snuggs/3zwkj9wg/embedded/result/dark/?fontColor=ffffff&accentColor=9696f0&menuColor=3b3b3b frameborder=0></iframe>
 
+<!--
 <hello-world>
   Hello World
 </hello-world>
@@ -83,5 +84,6 @@ Element `hello-world`
 })
 
 </script>
+-->
 
 <script src=/browser-sync.es></script>
