--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -37,6 +37,7 @@
 
 <header-group>
   <h2 slot=header>&lt;hello-world&gt;</h2>
+  <a  slot=subheader Title='See more componentexamples' href=./>See more component examples</a>
 </header-group>
 
 <section id=sand-box>
