Resize sandbox on examples/hello-world

--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -19,9 +19,17 @@
 }
 
 #sand-box iframe {
-  width: 49%;
-  margin: 0 0.5%;
+  position: absolute;
+  right: 0;
+  width: 30vw;
   min-height: 60vh;
+  margin: 0 14vw 0 0
+}
+
+#sand-box iframe:first-of-type {
+  left: 0;
+  width: 42vw;
+  margin: 0 0 0 14vw
 }
 
 </style>
