* Initial commit for finalizing weather component.
  Changes:

    [√] :wrench: examples/index.html
    [√] :fire:  examples/weather-viewer.html
    [√] :page_facing_up: examples/weather-viewer/index.html

--- a/examples/index.html
+++ b/examples/index.html
@@ -55,6 +55,9 @@
   <li>
     <a title=&lt;file-upload&gt; href=/examples/file-upload>&lt;file-upload&gt;</a>
 
+  <li>
+    <a href=/examples/weather-viewer/>&lt;weather-viewer&gt;</a>
+
 </ul>
 
 <script src=/browser-sync.es></script>
