* Initial commit for finalizing weather component.
  Changes:

    [√] :wrench: examples/index.html
    [√] :fire:  examples/weather-viewer.html
    [√] :page_facing_up: examples/weather-viewer/index.html

--- a/examples/index.html
+++ b/examples/index.html
@@ -64,6 +64,9 @@ console.log ('module')
   <li>
     <a href=/examples/file-upload>&lt;file-upload&gt;</a>
 
+  <li>
+    <a href=/examples/weather-viewer/>&lt;weather-viewer&gt;</a>
+
 </ul>
 
 <script src=../../vendor/browser-sync.es></script>
