--- a/index.html
+++ b/index.html
@@ -125,15 +125,16 @@ header-group a span {
       <a href=#tokens>Tokens</a>
 
     <li>
+      <!-- http://blog.aurelia.io/2016/05/23/aurelia-shadow-dom-v1-slots-prerelease -->
       <a href=#slots>Slots</a>
 
   </ul>
 
 </nav>
 
-<section view id=slots>
-<!--
-  http://blog.aurelia.io/2016/05/23/aurelia-shadow-dom-v1-slots-prerelease
--->
-</section>
+<main></main>
+
+<aside></aside>
+
+<footer></footer>
 
