--- a/examples/add-subtract.html
+++ b/examples/add-subtract.html
@@ -85,5 +85,6 @@ Element `add-subtract`
 </script>
 
 </add-subtract>
+<a href=https://gist.github.com/srdjan/1d10cbd42a2d695f696dee6b47fdc5e0>Counters</a>
 
 <script src=../../vendor/browser-sync.es></script>
