Fix bug in browsersync

--- a/examples/add-subtract.html
+++ b/examples/add-subtract.html
@@ -14,7 +14,6 @@
 <!-- import works inline body -->
 <link rel=import href=header-group.html>
 
-
 <add-subtract>
   <output>{count}</output>
 
@@ -89,4 +88,4 @@ Element `add-subtract`
 <a href=https://github.com/adrianmcli/omg-counters>OMG</a>
 <a href=https://gist.github.com/srdjan/1d10cbd42a2d695f696dee6b47fdc5e0>Counters</a>
 
-<script src=../../vendor/browser-sync.es></script>
+<script src=/browser-sync.es></script>
