Rename examples/file-uploader -> examples/file-uploader

--- a/examples/file-upload/index.html
+++ b/examples/file-upload/index.html
@@ -1,7 +1,7 @@
-<title>snuggsi ツ - File Upload</title>
-
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
+
+<title>&lt;file-upload&gt;</title>
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
@@ -13,7 +13,7 @@
 
 
 <header-group>
-  <h2 slot=header>&lt;file-uploader&gt;</h2>
+  <h2 slot=header>&lt;file-upload&gt;</h2>
   <em slot=subheader>With Drag-n-Drop support!</em>
 </header-group>
 
