--- a/examples/index.html
+++ b/examples/index.html
@@ -62,7 +62,7 @@ console.log ('module')
     <a href=/examples/party-line.html>&lt;party-line&gt;</a>
 
   <li>
-    <a href=file-uploader/index.html>file-uploader</a>
+    <a href=file-upload>&lt;file-upload&gt;</a>
 
 </ul>
 
