--- a/examples/file-upload/index.html
+++ b/examples/file-upload/index.html
@@ -1,33 +1,154 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-<title>&lt;file-upload&gt;</title>
+<title>&lt;file-uploader&gt;</title>
 
-<link rel=stylesheet href=http://www.devpunks.com/typography.css>
+<link rel=stylesheet href=/examples/file-upload/style.css>
 
-<script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=../../snuggsi.min.js></script>
+<script nomodule src=/examples/file-upload/script.es></script>
 
-<link rel=import href=../header-group.html>
-<link rel=import id=file-upload href=./template.html>
+<template>
+
+<label title={label}> {label}
+
+  <!--
+  `<input type=file list=datalist.id>`
+    https://www.w3.org/TR/2011/WD-html-markup-20110525/input.file.html
+    https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/file
+  -->
+  <input multiple list=mimetypes name=files type=file required accept={types}>
+
+</label>
+
+<slot name=mimetypes>
+  <!--
+    Media Accepts - https://www.wufoo.com/html5/attributes/07-accept.html
+    Media Capture - https://www.w3.org/TR/html-media-capture
+    Accept Attribute - https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input#attr-accept
+  -->
+</slot>
+
+<menu>
+  <button title='Clear All' onclick=onclear>Clear All</button>
+</menu>
+
+<aside>
+  <table>
+    <thead>
+      <tr>
+        <th colspan=2>Name
+        <th colspan=2>Size
+
+    <tbody>
+      <template name=files>
+        <tr>
+          <td><img src={icon_url} alt={type} hidden={hidden}>
+
+          <td>{name}
+
+          <td>{size}
+
+          <td><a onclick=onremove data-index={#}>Remove</a>
+
+      </template>
+
+  </table>
+</aside>
+
+</template>
+
+<h1>&lt;file-uploader&gt;</h1>
+
+<p>Custom <a rel=external target=mdn href=https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input><code>&lt;input type=file&gt;</code></a> element</p>
+
+<h2>Settings</h2>
+
+<dl>
+  <dt id=label>
+    <strong>label</strong>
+
+  <dd>
+    Default text
+
+  <dt id=title>
+    <strong>title</strong>
+
+  <dd>
+    Default dragenter &amp; mouseover text
+
+</dl>
+
+<h2>Slots</h2>
+
+<dl>
+  <dt id=header>
+    <strong>mimetypes</strong>
+
+  <dd>
+    A list of acceptable mimetypes
+    <em>
+      (<strong>default:</strong> A
+      <a rel=external target=mdn title=&lt;datalist&gt; href=https://developer.mozilla.org/en-US/docs/Web/HTML/Element/datalist>&lt;datalist&gt;</a>)
+    </em>
+
+</dl>
 
 
-<header-group>
-  <h2 slot=header>&lt;file-upload&gt;</h2>
-  <em slot=subheader>With Drag-n-Drop support!</em>
-</header-group>
+<h2>Example</h2>
 
-<file-upload label='Click to upload files' title='Drop files here'>
+<h3>CSS Styling</h3>
 
-  <!-- Remove <datalist> for png support -->
-  <datalist slot=mimetypes id=mimetypes>
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input#attr-accept -->
-    <option label=JPEG value=image/jpeg>
-    <option label=PNG  value=image/png>
-    <option label=PDF  value=application/pdf>
-  </datalist>
+<code>
+<pre>
+&lt;style&gt;
+  file-uploader {}
+  file-uploader label {}
+  file-uploader table {}
+  file-uploader menu button {}
+&lt;/style&gt;
+</pre>
+</code>
 
-</file-upload>
 
-<script src=../../vendor/browser-sync.es></script>
+<h3>HTML Markup</h3>
+
+<code>
+<pre>
+&lt;file-uploader
+
+  label='Default text'
+  title='Default dragenter &amp; mouseover text'&gt;
+
+  &lt;!-- optional mimetypes list --&gt;
+
+  &lt;datalist slot=mimetypes id=mimetypes&gt;
+    &lt;option capture label=PNG accept=image/png selected&gt;
+    &lt;option capture label=PDF accept=application/pdf&gt;
+    &lt;option capture label=JPG accept=image/jpg&gt;
+  &lt;/datalist&gt;
+
+&lt;/file-uploader&gt;
+</pre>
+</code>
+
+<footer>
+
+  <h3>Further Learning</h3>
+
+  <li>
+    <a rel=external target=mdn href=https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input><code>&lt;input type=file&gt;</code></a>
+
+  <li>
+    <a rel=external target=mdn title=&lt;datalist&gt; href=https://developer.mozilla.org/en-US/docs/Web/HTML/Element/datalist>&lt;datalist&gt;</a>
+
+  <li>
+    <a rel=external target=mdn href=https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input#attr-accept>Accept Attribute</a>
+
+  <li>
+    <a rel=external target=mdn href=https://www.wufoo.com/html5/attributes/07-accept.html>Media Accept</a>
+
+  <li>
+    <a rel=external target=mdn href=https://www.w3.org/TR/html-media-capture>Media Capture</a>
+
+</footer>
 
