--- a/examples/weather-viewer/index.html
+++ b/examples/weather-viewer/index.html
@@ -36,6 +36,24 @@
     get image ()
       { return 'https://cache-graphicslib.viator.com/graphicslib/destination/new-york-city-154345.jpg' }
 
+    locate () {
+
+      navigator.geolocation
+        .getCurrentPosition
+          (onlocate, error => alert (error))
+    }
+
+    onlocate (position) {
+      position.coords
+        .latitude
+
+      position.coords
+        .longitude
+
+      position.coords
+        .altitude
+    }
+
   })
 
 </script>
