--- a/examples/index.html
+++ b/examples/index.html
@@ -66,7 +66,7 @@ console.log ('module')
 
 </ul>
 
-<script src=../../vendor/browser-sync.es></script>
+<script src=/browser-sync.es></script>
 
 </html>
 
