Add Titles to components

--- a/examples/index.html
+++ b/examples/index.html
@@ -41,28 +41,28 @@ console.log ('module')
     <a href=/examples/link-import.html>&lt;link-import&gt;</a>
 
   <li>
-    <a href=/examples/x-flashy.html>&lt;x-flashy&gt;</a>
+    <a title=&lt;x-flash&gt; href=/examples/x-flashy.html>&lt;x-flashy&gt;</a>
 
   <li>
-    <a href=/examples/add-subtract.html>&lt;add-subtract&gt;</a>
+    <a title=&lt;add-subtract&gt; href=/examples/add-subtract.html>&lt;add-subtract&gt;</a>
 
   <li>
-    <a href=/examples/infinity-calendar.html>&lt;infinity-calendar&gt;</a>
+    <a title=&lt;infinity-calendar&gt; href=/examples/infinity-calendar.html>&lt;infinity-calendar&gt;</a>
 
   <li>
-    <a href=/examples/filter.html>&lt;filter&gt;</a>
+    <a title=&lt;filter&gt; href=/examples/filter.html>&lt;filter&gt;</a>
 
   <li>
-    <a href=/examples/input-output.html>&lt;input-output&gt;</a>
+    <a title=&lt;input-output&gt; href=/examples/input-output.html>&lt;input-output&gt;</a>
 
   <li>
-    <a href=/examples/autocomplete.html>&lt;autocomplete&gt;</a>
+    <a title=&lt;autocomplete&gt; href=/examples/autocomplete.html>&lt;autocomplete&gt;</a>
 
   <li>
-    <a href=/examples/party-line.html>&lt;party-line&gt;</a>
+    <a title=&lt;party-line&gt; href=/examples/party-line.html>&lt;party-line&gt;</a>
 
   <li>
-    <a href=/examples/file-upload>&lt;file-upload&gt;</a>
+    <a title=&lt;file-upload&gt; href=/examples/file-upload>&lt;file-upload&gt;</a>
 
 </ul>
 
