Use cdnjs for webcomponents-hi-ce.js

--- a/examples/link-import.html
+++ b/examples/link-import.html
@@ -1,9 +1,8 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-
-<script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=https://unpkg.com/snuggsi/snuggsi.min.js></script>
+<script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
+<script nomodule src=//unpkg.com/snuggsi></script>
 
 <link rel=import href=header-group.html>
 
