Refactor link-import example

--- a/examples/link-import.html
+++ b/examples/link-import.html
@@ -28,7 +28,5 @@
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
-<script src=../../vendor/browser-sync.es></script>
-<!--
--->
+<script src=/browser-sync.es></script>
 
