Migrate header-group to directory

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,26 +1,17 @@
-<!doctype html>
-<html>
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-<link rel=stylesheet href=http://www.devpunks.com/typography.css>
-
-<link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
-<link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
-
-<script src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script type=module src=//unpkg.com/snuggsi/elements/index.es></script>
-<script nomodule src=//unpkg.com/snuggsi></script>
-<script nomodule>
-console.log ('nomodule')
-</script>
-<script type=module>
-console.log ('module')
-</script>
-
-<link rel=import href=/examples/header-group.html>
 
 <title>snuggsi - examples</title>
+
+<link rel=stylesheet href=http://www.devpunks.com/typography.css>
+
+<link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
+
+<script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
+<script nomodule src=//unpkg.com/snuggsi></script>
+
+<link rel=import href=/examples/header-group.html>
 
 <style>
 
@@ -38,7 +29,7 @@ console.log ('module')
     <a href=/examples/hello-world.html>&lt;hello-world&gt;</a>
 
   <li>
-    <a href=/examples/link-import.html>&lt;link-import&gt;</a>
+    <a href=/examples/header-group>&lt;header-group&gt;</a>
 
   <li>
     <a title=&lt;x-flash&gt; href=/examples/x-flashy.html>&lt;x-flashy&gt;</a>
@@ -67,6 +58,4 @@ console.log ('module')
 </ul>
 
 <script src=/browser-sync.es></script>
-
-</html>
 
