:lipstick: cosmetic changes on header-group

--- a/examples/header-group/index.html
+++ b/examples/header-group/index.html
@@ -16,6 +16,7 @@ header-group {
 
   <hgroup>
     <h1><a href=/>snuggsi<span>.es</span>ツ</a></h1>
+
     <slot name=header><h2>try an example</h2></slot>
     <slot name=subheader></slot>
   </hgroup>
@@ -26,13 +27,21 @@ header-group {
 <script>
 
 Element `header-group`
-(class extends HTMLElement { })
+  (class extends HTMLElement { })
 
 </script>
 
 <h1>&lt;header-group&gt;</h1>
 
-<p>Custom <a rel=external target=mdn href=https://developer.mozilla.org/en-US/docs/Web/HTML/Element/hgroup><code>&lt;hgroup&gt;</code></a> element</p>
+<p>
+  Custom
+  <a rel=external
+     target=mdn
+     href=https://developer.mozilla.org/en-US/docs/Web/HTML/Element/hgroup>
+       <code>&lt;hgroup&gt;</code>
+   </a>
+   element
+</p>
 
 <h2>Slots</h2>
 
