Update path to examples/header-group

--- a/examples/add-subtract.html
+++ b/examples/add-subtract.html
@@ -48,7 +48,7 @@ add-subtract button {
   <h2 slot=header>&lt;add-subtract&gt;</h2>
 </header-group>
 <!-- import works inline body -->
-<link rel=import href=header-group.html>
+<link rel=import href=/examples/header-group>
 
 <add-subtract>
 
