--- a/examples/autocomplete.html
+++ b/examples/autocomplete.html
@@ -12,7 +12,7 @@
   <h2 slot=header>Autocomplete Dropdown</h2>
 </header-group>
 <!-- import works inline body -->
-<link rel=import href=header-group.html>
+<link rel=import href=/examples/header-group>
 
 
 <p>
