--- a/examples/filter.html
+++ b/examples/filter.html
@@ -8,7 +8,7 @@
 <script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
 <script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
 
-<link rel=import href=header-group.html>
+<link rel=import href=/examples/header-group>
 
 <header-group>
   <h2 slot=header>Filter List</h2>
