--- a/examples/header-group/example.html
+++ b/examples/header-group/example.html
@@ -4,7 +4,7 @@
 <script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 <script nomodule src=//unpkg.com/snuggsi></script>
 
-<link rel=import href=header-group.html>
+<link rel=import href=/examples/header-group>
 
 <title>snuggsi ツ - Header Group</title>
 
