--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -39,7 +39,7 @@ figure iframe:first-of-type {
 <script type=module src=http://unpkg.com/snuggsi></script>
 
 <!-- import works inline body -->
-<link async rel=import href=header-group.html>
+<link rel=import href=/examples/header-group>
 
 <link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
 
