--- a/examples/index.html
+++ b/examples/index.html
@@ -11,7 +11,7 @@
 <script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 <script nomodule src=//unpkg.com/snuggsi></script>
 
-<link rel=import href=/examples/header-group.html>
+<link rel=import href=/examples/header-group>
 
 <style>
 
@@ -29,7 +29,7 @@
     <a href=/examples/hello-world.html>&lt;hello-world&gt;</a>
 
   <li>
-    <a href=/examples/header-group>&lt;header-group&gt;</a>
+    <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
 
   <li>
     <a title=&lt;x-flash&gt; href=/examples/x-flashy.html>&lt;x-flashy&gt;</a>
