--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -15,7 +15,7 @@
   <h2 slot=header>&lt;input-output&gt;</h2>
 </header-group>
 <!-- import works inline body -->
-<link rel=import href=header-group.html>
+<link rel=import href=/examples/header-group>
 
 
 <input-output>
