--- a/examples/party-line.html
+++ b/examples/party-line.html
@@ -12,8 +12,8 @@
   <h2 slot=header>&lt;party-line&gt;</h2>
   <h3 slot=subheader>Skype / Hangouts Clone</h3>
 </header-group>
-<!-- import works inline body -->
-<link rel=import href=header-group.html>
+
+<link rel=import href=/examples/header-group>
 
 <party-line>
   <section id=messages>
