--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -14,8 +14,7 @@
 <script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
 <script nomodule src=https://unpkg.com/snuggsi></script>
 
-<!-- import works inline body -->
-<link rel=import href=header-group.html>
+<link rel=import href=/examples/header-group>
 
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
