--- a/examples/x-flashy.html
+++ b/examples/x-flashy.html
@@ -40,7 +40,7 @@
   <h3 slot=subheader>Components can be as flashy as you want</h3>
 </header-group>
 <!-- import works inline body -->
-<link rel=import href=header-group.html>
+<link rel=import href=/examples/header-group>
 
 
 <x-flashy>
