--- a/examples/header-group/example.html
+++ b/examples/header-group/example.html
@@ -1,12 +1,15 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-<script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
+<title>&lt;header-group&gt;</title>
+
 <script nomodule src=//unpkg.com/snuggsi></script>
+<script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
+
+<link rel=stylesheet href=http://www.devpunks.com/typography.css>
+<link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
 <link rel=import href=/examples/header-group>
-
-<title>snuggsi ツ - Header Group</title>
 
 <header-group>
   <h2 slot=header>&lt;header-group&gt;</h2>
@@ -24,9 +27,6 @@
 <header-group>
   <h2 slot=header>MrBernnz &amp; Snuggsi Header</h2>
 </header-group>
-
-<link rel=stylesheet href=http://www.devpunks.com/typography.css>
-<link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
 <script src=/browser-sync.es></script>
 
