--- a/examples/header-group/example.html
+++ b/examples/header-group/example.html
@@ -7,7 +7,7 @@
 <script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
-<link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
+<link rel=icon type=image/png href=/favicon-16x16.png sizes=16x16>
 
 <link rel=import href=/examples/header-group>
 
