--- a/benchmarks/index.html
+++ b/benchmarks/index.html
@@ -15,6 +15,7 @@
 <p>Influenced off the following talk <em>"<a href=https://youtu.be/6I_GwgoGm1w target=external>Choosing a Javascript Framework"</a> -</em> <cite>Rob Eisenberg former Angular 2 core team member</cite>
 
 <p><a href=https://github.com/krausest/js-framework-benchmark>JS Framework Benchmark</a></p>
+<p><a href=https://rawgit.com/krausest/js-framework-benchmark/67a05320ee3d485f059c3cb11fa2b872ded3c5bf/webdriver-ts/table.html>JS Framework Benchmark <em>(table)</em></a></p>
 <p><a href=https://medium.com/@localvoid/how-to-win-in-web-framework-benchmarks-8bc31af76ce7>Win Web Framework</a></p>
 <nav>
 <a href=#mithril>Mithril.js</a>
