--- a/examples/header-group/example.html
+++ b/examples/header-group/example.html
@@ -3,7 +3,7 @@
 
 <title>&lt;header-group&gt;</title>
 
-<script nomodule src=//unpkg.com/snuggsi></script>
+<script nomodule src=/snuggsi/snuggsi.js></script>
 <script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
@@ -20,8 +20,8 @@
 
 <!-- slots let you map content to template output -->
 <header-group>
-  <p slot=subheader>slots control output arrangement</p>
   <h2 slot=header>My Own Header</h2>
+  <p  slot=subheader>slots control output arrangement</p>
 </header-group>
 
 <header-group>
