Update unpkg.com link for examples/header-group

--- a/examples/header-group/example.html
+++ b/examples/header-group/example.html
@@ -3,7 +3,7 @@
 
 <title>&lt;header-group&gt;</title>
 
-<script nomodule src=/snuggsi/snuggsi.js></script>
+<script nomodule src=//unpkg.com/snuggsi></script>
 <script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
