Add link to examples on x-flashy

--- a/examples/x-flashy.html
+++ b/examples/x-flashy.html
@@ -37,7 +37,7 @@
 
 <header-group>
   <h2 slot=header>&lt;x-flashy&gt;</h2>
-  <h3 slot=subheader>Components can be as flashy as you want</h3>
+  <a  slot=subheader Title='See more componentexamples' href=/examples>See more component examples</a>
 </header-group>
 <!-- import works inline body -->
 <link rel=import href=/examples/header-group>
